--- a/index.html
+++ b/index.html
@@ -39,7 +39,7 @@
                 <a class="nav-link text-reset" href="#contacto">CONTACTO</a>
               </li>
               <li class="nav-item">
-                <a class="nav-link text-reset" href="#ubicacion">UBICACION</a>
+                <a class="nav-link text-reset" href="#ubicacion">UBICACIÓN</a>
               </li>
               <li class="nav-item ubiWsp">
                 <svg xmlns="http://www.w3.org/2000/svg" width="16" height="16" fill="currentColor" class="bi bi-geo-alt" viewBox="0 0 16 16">
@@ -64,7 +64,7 @@
                 <div class="carousel-caption d-none d-md-block">
                     <h1 class="estudio">Estudio Cadoche</h1>
                     <a href="https://api.whatsapp.com/send?phone=541161433236" target="_blank"><button class="boton"><h3>Contactanos</h3></button></a>
-                    <h2 class="titulo2">Estudio Jurídico especializado en Accidentes de Tránsito y Laboral.</h2>
+                    <h2 class="titulo2">Estudio Jurídico especializado en accidentes de tránsito y de trabajo.</h2>
                     
                 </div>
               </div>
@@ -79,7 +79,7 @@
               <div class="carousel-item">
                 <img src="./img/fondo3.jpg" class="imgC d-block w-100" alt="...">
                 <div class="carousel-caption d-none d-md-block">
-                    <h1 class="atnP">Atencion Personalizada</h1>
+                    <h1 class="atnP">Atención Personalizada</h1>
                     <a href="https://api.whatsapp.com/send?phone=541161433236" target="_blank"><button class="boton"><h3>Contactanos</h3></button></a>
                     <h2 class="titulo2">En muestro WhatsApp respondemos todas tus dudas y te ayudamos a tomar la mejor decisión.</h2>
                 </div>
@@ -99,7 +99,7 @@
           <div class="estudioMovil">
             <h1 class="titulo tituloMovil ">Estudio Cadoche</h1>
             <a href="https://api.whatsapp.com/send?phone=541161433236" target="_blank"><button class="boton"><h3>Contactanos</h3></button></a>
-            <h2 class="titulo2">Eestudio Jurídico especializado en Accidentes de Tránsito y Laboral</h2>
+            <h2 class="titulo2">Estudio Jurídico especializado en accidentes de tránsito y de trabajo</h2>
           </div>
         </section>
         
@@ -157,21 +157,21 @@
             <svg xmlns="http://www.w3.org/2000/svg" width="61" height="61" fill="currentColor" class="bi bi-chat-dots-fill" viewBox="0 0 16 16">
               <path d="M16 8c0 3.866-3.582 7-8 7a9.06 9.06 0 0 1-2.347-.306c-.584.296-1.925.864-4.181 1.234-.2.032-.352-.176-.273-.362.354-.836.674-1.95.77-2.966C.744 11.37 0 9.76 0 8c0-3.866 3.582-7 8-7s8 3.134 8 7zM5 8a1 1 0 1 0-2 0 1 1 0 0 0 2 0zm4 0a1 1 0 1 0-2 0 1 1 0 0 0 2 0zm3 1a1 1 0 1 0 0-2 1 1 0 0 0 0 2z"/>
             </svg>
-            <h4>Atención personalizada las 24 horas.</h2>
+            <h4>Atención personalizada las 24 horas</h2>
           </div>
           <div class="servIcon">
             <svg xmlns="http://www.w3.org/2000/svg" width="61px" height="61" fill="currentColor" class="bi bi-person-check" viewBox="0 0 16 16">
               <path d="M12.5 16a3.5 3.5 0 1 0 0-7 3.5 3.5 0 0 0 0 7Zm1.679-4.493-1.335 2.226a.75.75 0 0 1-1.174.144l-.774-.773a.5.5 0 0 1 .708-.708l.547.548 1.17-1.951a.5.5 0 1 1 .858.514ZM11 5a3 3 0 1 1-6 0 3 3 0 0 1 6 0ZM8 7a2 2 0 1 0 0-4 2 2 0 0 0 0 4Z"/>
               <path d="M8.256 14a4.474 4.474 0 0 1-.229-1.004H3c.001-.246.154-.986.832-1.664C4.484 10.68 5.711 10 8 10c.26 0 .507.009.74.025.226-.341.496-.65.804-.918C9.077 9.038 8.564 9 8 9c-5 0-6 3-6 4s1 1 1 1h5.256Z"/>
             </svg>
-            <h4>Reclamos extrajudiciales Y judiciales  a compañia de seguro.</h4>
+            <h4>Reclamos extrajudiciales y judiciales  a compañia de seguro</h4>
           </div>
           <div class="servIcon">
             <svg xmlns="http://www.w3.org/2000/svg" width="61" height="61" fill="currentColor" class="bi bi-vector-pen" viewBox="0 0 16 16">
               <path fill-rule="evenodd" d="M10.646.646a.5.5 0 0 1 .708 0l4 4a.5.5 0 0 1 0 .708l-1.902 1.902-.829 3.313a1.5 1.5 0 0 1-1.024 1.073L1.254 14.746 4.358 4.4A1.5 1.5 0 0 1 5.43 3.377l3.313-.828L10.646.646zm-1.8 2.908-3.173.793a.5.5 0 0 0-.358.342l-2.57 8.565 8.567-2.57a.5.5 0 0 0 .34-.357l.794-3.174-3.6-3.6z"/>
               <path fill-rule="evenodd" d="M2.832 13.228 8 9a1 1 0 1 0-1-1l-4.228 5.168-.026.086.086-.026z"/>
             </svg>
-            <h4>Reclamos  extrajudiciales Y judiciales contra A.R.T.</h4>
+            <h4>Reclamos  extrajudiciales y judiciales contra A.R.T.</h4>
           </div>
           <div class="servIcon">
             <svg xmlns="http://www.w3.org/2000/svg" width="61" height="61" fill="currentColor" class="bi bi-bank" viewBox="0 0 16 16">
@@ -197,7 +197,7 @@
           <svg xmlns="http://www.w3.org/2000/svg" width="61" height="61" fill="currentColor" class="bibi-whatsapp icono" viewBox="0 0 16 16">
             <path d="M13.601 2.326A7.854 7.854 0 0 0 7.994 0C3.627 0 .068 3.558.064 7.926c0 1.399.366 2.76 1.057 3.965L0 16l4.204-1.102a7.933 7.933 0 0 0 3.79.965h.004c4.368 0 7.926-3.558 7.93-7.93A7.898 7.898 0 0 0 13.6 2.326zM7.994 14.521a6.573 6.573 0 0 1-3.356-.92l-.24-.144-2.494.654.666-2.433-.156-.251a6.56 6.56 0 0 1-1.007-3.505c0-3.626 2.957-6.584 6.591-6.584a6.56 6.56 0 0 1 4.66 1.931 6.557 6.557 0 0 1 1.928 4.66c-.004 3.639-2.961 6.592-6.592 6.592zm3.615-4.934c-.197-.099-1.17-.578-1.353-.646-.182-.065-.315-.099-.445.099-.133.197-.513.646-.627.775-.114.133-.232.148-.43.05-.197-.1-.836-.308-1.592-.985-.59-.525-.985-1.175-1.103-1.372-.114-.198-.011-.304.088-.403.087-.088.197-.232.296-.346.1-.114.133-.198.198-.33.065-.134.034-.248-.015-.347-.05-.099-.445-1.076-.612-1.47-.16-.389-.323-.335-.445-.34-.114-.007-.247-.007-.38-.007a.729.729 0 0 0-.529.247c-.182.198-.691.677-.691 1.654 0 .977.71 1.916.81 2.049.098.133 1.394 2.132 3.383 2.992.47.205.84.326 1.129.418.475.152.904.129 1.246.08.38-.058 1.171-.48 1.338-.943.164-.464.164-.86.114-.943-.049-.084-.182-.133-.38-.232z"/>
           </svg>
-          <h3>1130484191</h3>
+          <h3>1161433236</h3>
         </div>
         <div class="cont2">
           <svg xmlns="http://www.w3.org/2000/svg" width="61" height="61" fill="currentColor" class="bibi-envelope-at icono" viewBox="0 0 16 16">
